--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -165,13 +165,14 @@ nav{
   }
 
 nav{
-    border-bottom: black solid 2px;
+    border-bottom: silver solid 2px;
   }
 
   .nav-category{
 
     display: grid;
     grid-template-columns: repeat(3 , 1fr);
+    text-align: center;
 
   }
 
@@ -201,6 +202,7 @@ nav{
 
 
 
+
 }
 
 
@@ -210,24 +212,44 @@ nav{
 
   a{
     text-decoration: none;
-    color: black;
+    color: white
   }
 
 nav{
-    border-bottom: black solid 2px;
+    border-bottom: silver solid 2px;
   }
 
-.nav-1{
-  display: grid;
-  grid-template-columns: 30% 50%;
+  .nav-category{
 
-}
+    display: grid;
+    grid-template-columns: repeat(3 , 1fr);
+    text-align: center;
 
-.nav-category{
-  margin-top: 20px;
-  display: grid;
-  grid-template-columns: repeat(3 , 1fr);
-}
+  }
+
+ 
+
+  .dataResult{
+    margin-top: 5px;
+    width: 100%;
+    height: 200px;
+    border: #000 1px solid;
+    background-color: white;
+    overflow: hidden;
+    overflow-y: auto;
+    position: absolute;
+
+  }
+
+  .searchIcon{
+    display: none;
+  }
+
+  .nav-3{
+    display: grid;
+    grid-template-columns: 80px 80px;
+
+  }
 
 
 }
