--- a/src/Components/ProductDetails.js/Product.css
+++ b/src/Components/ProductDetails.js/Product.css
@@ -45,8 +45,10 @@ grid-template-columns: 40% 50%
 .cart-input{
 height: 20px;
 border-radius: 5px;
-
-
+width: 150px;
+background-color: rgb(0, 0, 0);
+color: white;
+border: white 1px solid;
 }
 
 
@@ -114,6 +116,21 @@ margin-top: 30px;
 
 }
 
+
+.selected-image{
+  width: 90px;
+  height: 80px;
+  
+  }
+
+.image-option{
+
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 100px);
+ 
+
+}
+
 .image{
 height: 270px;
 width: 220px;
@@ -170,6 +187,15 @@ p{
   color: white;
 }
 
+
+.image{
+
+  width: 229px;
+  height: 250px;
+
+
+}
+
 }
 
 
@@ -179,61 +205,90 @@ p{
 
   .image-container{
 
-margin-top: 30px;
-
-}
-
-.image{
-height: 270px;
-width: 220px;
-}
-
-
-.product-details{
-    margin-left: 5px;
-}
-
-.cart{
-display: grid;
-grid-row-gap: 20px;
-margin-top: 10px;
-
-}
-
-
-.add-delete{
-
-width: 35%;
-height:40px;
-font-size: 15px;
-color: white;
-border: none;
-border-radius: 5px;
-background-color: black;
-
-}
-
-
-.fav-btns{
-border: none;
-background-color: white;
-text-align: left;
-}
-
-.des-btns{
-border: none;
-background-color: white;
-font-size: 20px;
-cursor: pointer;
-}
-
-.product-description{
-
-line-height: 25px;  
-font-weight: bold;
-
-}
-
+    margin-top: 30px;
+    
+    }
+    
+    
+    .selected-image{
+      width: 90px;
+      height: 80px;
+      
+      }
+    
+    .image-option{
+    
+      display: grid;
+      grid-template-columns: repeat(auto-fill, 100px);
+     
+    
+    }
+    
+    .image{
+    height: 270px;
+    width: 220px;
+    }
+    
+    
+    .product-details{
+        margin-left: 5px;
+    }
+    
+    .cart{
+    display: grid;
+    grid-row-gap: 20px;
+    margin-top: 10px;
+    
+    }
+    
+    
+    .add-delete{
+    
+      width: 30%;
+      height:40px;
+      font-size: 15px;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      background-color: rgb(11, 11, 191)
+      
+      }
+    
+    
+      .fav-btns{
+        border: none;
+        background-color: black;
+        text-align: left;
+        }
+    
+        .des-btns{
+          border: none;
+          background-color: black;
+          color: white;
+          font-size: 20px;
+          cursor: pointer;
+          }
+    
+    .product-description{
+    
+    line-height: 25px;  
+    font-weight: bold;
+    
+    }
+    
+    p{
+      color: white;
+    }
+    
+    
+    .image{
+    
+      width: 229px;
+      height: 250px;
+    
+    
+    }
+    
 
 
 
@@ -244,60 +299,91 @@ font-weight: bold;
 
   .image-container{
 
-margin-top: 30px;
+    margin-top: 30px;
+    
+    }
+    
+    
+    .selected-image{
+      width: 90px;
+      height: 80px;
+      
+      }
+    
+    .image-option{
+    
+      display: grid;
+      grid-template-columns: repeat(auto-fill, 100px);
+     
+    
+    }
+    
+    .image{
+    height: 270px;
+    width: 220px;
+    }
+    
+    
+    .product-details{
+        margin-left: 5px;
+    }
+    
+    .cart{
+    display: grid;
+    grid-row-gap: 20px;
+    margin-top: 10px;
+    
+    }
+    
+    
+    .add-delete{
+    
+      width: 30%;
+      height:40px;
+      font-size: 15px;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      background-color: rgb(11, 11, 191)
+      
+      }
+    
+    
+      .fav-btns{
+        border: none;
+        background-color: black;
+        text-align: left;
+        }
+    
+        .des-btns{
+          border: none;
+          background-color: black;
+          color: white;
+          font-size: 20px;
+          cursor: pointer;
+          }
+    
+    .product-description{
+    
+    line-height: 25px;  
+    font-weight: bold;
+    
+    }
+    
+    p{
+      color: white;
+    }
+    
+    
+    .image{
+    
+      width: 229px;
+      height: 250px;
+    
+    
+    }
+    
 
-}
-
-.image{
-height: 270px;
-width: 220px;
-}
-
-
-.product-details{
-    margin-left: 5px;
-}
-
-.cart{
-display: grid;
-grid-row-gap: 20px;
-margin-top: 10px;
-
-}
-
-
-.add-delete{
-
-width: 35%;
-height:40px;
-font-size: 15px;
-color: white;
-border: none;
-border-radius: 5px;
-background-color: black;
-
-}
-
-
-.fav-btns{
-border: none;
-background-color: white;
-text-align: left;
-}
-
-.des-btns{
-border: none;
-background-color: white;
-font-size: 20px;
-cursor: pointer;
-}
-
-.product-description{
-
-line-height: 25px;  
-font-weight: bold;
-
-}
 
 }
 
