--- a/src/Components/UserInfo/userlink.css
+++ b/src/Components/UserInfo/userlink.css
@@ -23,17 +23,14 @@
 
 @media (min-width: 320px) and (max-width: 576px) {
     .userLink {
-      display: flex;
-      flex-direction: row;
-      align-items: center; /* Optional: Align items in the center horizontally */
-    }
-  
-    .userLink{
-        position: relative;
-        right: 25px;
+      position: relative;
+      right: 20px;    
+      display: grid;
+      grid-template-columns: repeat(auto-fill, 100px);
 
     }
   
+ 
     .logout {
       background: none;
       border: none;
