--- a/src/Components/Comics/Comic.css
+++ b/src/Components/Comics/Comic.css
@@ -123,6 +123,11 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
+   
+  }
+
+  .filter-products{
+    margin-bottom: 20px;
   }
   
   .select-container div {
@@ -137,11 +142,7 @@
   }
 
   
-  .filter-products{
-    display: grid;
-    grid-row-gap: 15px;
-    text-align: center;
-  }
+  
 
 
   .category-heading{
@@ -149,20 +150,22 @@
   }
 
   .product-card{
-    text-align: center;
-    display: grid;
-    grid-row-gap: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
   }
 
-  .product{
+  .product {
     height: 110%;
     margin-left: 10px;
     margin-right: 10px;
     border: 2px solid white;
     background-color: black;
     border-radius: 2%;
-    box-shadow: 1px 2px 2px 2px #000000;
 
+    width: 300px;
   }
 
   .product-image{
@@ -210,11 +213,16 @@
   }
 
   .filter-toggle {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); /* Adjust the minmax value as needed */
-  overflow-x: auto;
-  white-space: nowrap;
-}
+    display: flex; /* Use flex container */
+    overflow-x: auto;
+    white-space: nowrap;
+  }
+  
+  /* Optionally, you can add spacing between each checkbox and brand name */
+  .filter-toggle > div {
+    margin-right: 10px; /* Adjust as needed */
+  }
+
 
 }
 
@@ -237,6 +245,11 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
+   
+  }
+
+  .filter-products{
+    margin-bottom: 20px;
   }
   
   .select-container div {
@@ -251,11 +264,7 @@
   }
 
   
-  .filter-products{
-    display: grid;
-    grid-row-gap: 15px;
-    text-align: center;
-  }
+  
 
 
   .category-heading{
@@ -263,20 +272,22 @@
   }
 
   .product-card{
-    text-align: center;
-    display: grid;
-    grid-row-gap: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
   }
 
-  .product{
+  .product {
     height: 110%;
     margin-left: 10px;
     margin-right: 10px;
     border: 2px solid white;
     background-color: black;
     border-radius: 2%;
-    box-shadow: 1px 2px 2px 2px #000000;
 
+    width: 300px;
   }
 
   .product-image{
@@ -324,12 +335,15 @@
   }
 
   .filter-toggle {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); /* Adjust the minmax value as needed */
-  overflow-x: auto;
-  white-space: nowrap;
-}
-
+    display: flex; /* Use flex container */
+    overflow-x: auto;
+    white-space: nowrap;
+  }
+  
+  /* Optionally, you can add spacing between each checkbox and brand name */
+  .filter-toggle > div {
+    margin-right: 10px; /* Adjust as needed */
+  }
 
   
 }
