--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -91,6 +91,9 @@
     display: none
   }
   
+  .dropdown-link{
+    color: white;
+  }
     
   .user{
     font-size: 25px;
@@ -113,43 +116,76 @@
     text-decoration: none;
     color: white
   }
-
-nav{
-    border-bottom: silver solid 2px;
+  .dropdown-link{
+    color: white;
   }
+    
 
-  .nav-category{
+/* CSS for the search bar */
+.search .searchbar {
+  border: 0px;
+  border-radius: 2px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  font-size: 18px;
+  padding: 15px;
+  height: 30px;
+  width: 300px;
+  background-color: black;
+  color: white;
+  border: white 1px solid;
+  margin: 0 auto; /* Add this line to center the search bar horizontally */
+}
 
-    display: grid;
-    grid-template-columns: repeat(3 , 1fr);
-    text-align: center;
+/* CSS for the search container */
+.search {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 
-  }
-
- 
-
-  .dataResult{
-    margin-top: 5px;
-    width: 100%;
-    height: 200px;
-    border: #000 1px solid;
-    background-color: white;
-    overflow: hidden;
-    overflow-y: auto;
-    position: absolute;
-
-  }
-
+/* CSS for the dataResult dropdown menu */
+.dataResult {
+  width: 300px;
+  max-height: 200px; /* Use max-height instead of height to limit the size of the dataResult div */
+  border: white 1px solid;
+  background-color: black;
+  overflow: hidden;
+  overflow-y: auto;
+  position: absolute;
+  top: calc(100% + 5px); /* Position .dataResult below the .searchbar with a small gap */
+  left: 0;
+}
+  
+  nav{
+      border-bottom: silver solid 2px;
+    }
+  
+    .nav-category{
+  
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      gap: 20px;
+  
+    }
+  
   .searchIcon{
     display: none;
   }
 
   .nav-3{
-    display: grid;
-    grid-template-columns: 80px 80px;
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   gap: 20px;
 
   }
 
+ 
 
 }
 
@@ -159,50 +195,79 @@ nav{
 @media (min-width: 577px) and (max-width: 768px){
 
 
+ 
   a{
     text-decoration: none;
     color: white
   }
-
-nav{
-    border-bottom: silver solid 2px;
+  .dropdown-link{
+    color: white;
   }
+    
 
-  .nav-category{
+/* CSS for the search bar */
+.search .searchbar {
+  border: 0px;
+  border-radius: 2px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  font-size: 18px;
+  padding: 15px;
+  height: 30px;
+  width: 300px;
+  background-color: black;
+  color: white;
+  border: white 1px solid;
+  margin: 0 auto; /* Add this line to center the search bar horizontally */
+}
 
-    display: grid;
-    grid-template-columns: repeat(3 , 1fr);
-    text-align: center;
+/* CSS for the search container */
+.search {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 
-  }
-
- 
-
-  .dataResult{
-    margin-top: 5px;
-    width: 100%;
-    height: 200px;
-    border: #000 1px solid;
-    background-color: white;
-    overflow: hidden;
-    overflow-y: auto;
-    position: absolute;
-
-  }
-
+/* CSS for the dataResult dropdown menu */
+.dataResult {
+  width: 300px;
+  max-height: 200px; /* Use max-height instead of height to limit the size of the dataResult div */
+  border: white 1px solid;
+  background-color: black;
+  overflow: hidden;
+  overflow-y: auto;
+  position: absolute;
+  top: calc(100% + 5px); /* Position .dataResult below the .searchbar with a small gap */
+  left: 0;
+}
+  
+  nav{
+      border-bottom: silver solid 2px;
+    }
+  
+    .nav-category{
+  
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      gap: 20px;
+  
+    }
+  
   .searchIcon{
     display: none;
   }
 
   .nav-3{
-    display: grid;
-    grid-template-columns: 80px 80px;
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   gap: 20px;
 
   }
-
-
-
-
 }
 
 
@@ -214,42 +279,73 @@ nav{
     text-decoration: none;
     color: white
   }
-
-nav{
-    border-bottom: silver solid 2px;
+  .dropdown-link{
+    color: white;
   }
+    
 
-  .nav-category{
+/* CSS for the search bar */
+.search .searchbar {
+  border: 0px;
+  border-radius: 2px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  font-size: 18px;
+  padding: 15px;
+  height: 30px;
+  width: 300px;
+  background-color: black;
+  color: white;
+  border: white 1px solid;
+  margin: 0 auto; /* Add this line to center the search bar horizontally */
+}
 
-    display: grid;
-    grid-template-columns: repeat(3 , 1fr);
-    text-align: center;
+/* CSS for the search container */
+.search {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 
-  }
-
- 
-
-  .dataResult{
-    margin-top: 5px;
-    width: 100%;
-    height: 200px;
-    border: #000 1px solid;
-    background-color: white;
-    overflow: hidden;
-    overflow-y: auto;
-    position: absolute;
-
-  }
-
+/* CSS for the dataResult dropdown menu */
+.dataResult {
+  width: 300px;
+  max-height: 200px; /* Use max-height instead of height to limit the size of the dataResult div */
+  border: white 1px solid;
+  background-color: black;
+  overflow: hidden;
+  overflow-y: auto;
+  position: absolute;
+  top: calc(100% + 5px); /* Position .dataResult below the .searchbar with a small gap */
+  left: 0;
+}
+  
+  nav{
+      border-bottom: silver solid 2px;
+    }
+  
+    .nav-category{
+  
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      gap: 20px;
+  
+    }
+  
   .searchIcon{
     display: none;
   }
 
   .nav-3{
-    display: grid;
-    grid-template-columns: 80px 80px;
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   gap: 20px;
 
   }
-
 
 }
