--- a/src/Components/Reviews/Reviews.css
+++ b/src/Components/Reviews/Reviews.css
@@ -1,30 +1,40 @@
-
+/* CSS for the section */
 @media (min-width: 993px){
-    .Reviews {
-        /* background-color: whitesmoke; */
-        padding: 1em;
-        box-shadow: 2px 2px 4px silver;
-      }
+  
+  .review-info-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-left: 10px;
+  }
+  
 
+  .reviewer{
+    color: white;
+  }
 
-      .Reviews > div {
-        padding: 1em;
-        box-shadow: 0px 0px 2px silver;
-        /* background-color: ghostwhite; */
-      }
+  .Reviews {
+    /* background-color: whitesmoke; */
+    padding: 1em;
+  
+  }
 
-      .review-data{
-        text-align: left;
-      }
+  .review-data{
+    text-align: left;
+    
+  }
 
-
-      .reviewer , .review-content{
-        text-align: left;
-        margin-left: 10px;
-      }
-
-      h2{
-        color: white;
-      }
-
+  
+  .review-select-bar{
+    width: 33%;
+  }
+  
+  .Review{
+    border: white solid 1px;
+  }
+  
+}
+h2{
+  color: white;
 }
