--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -11,19 +11,25 @@
       box-sizing: border-box;
       border: 1px solid silver; 
       width: 80%;
-      height: 100%; /* Adjust this value to set the desired fixed height */
+      height: 200px; /* Adjust this value to set the desired fixed height */
       box-shadow: 2px 2px 4px #000000;
       border-radius: 5px;
     
     }
 
 
-.order-details {
-  border: silver solid 1px;
-  box-shadow: 2px 2px 4px #000000;
-  text-align: left;
-  border-radius: 20px;
-}
+    .order-details {
+      border: silver solid 1px;
+      box-shadow: 2px 2px 4px #000000;
+      text-align: left;
+      border-radius: 20px;
+      /* height: 300px; Remove this line */
+      height: 220px;
+    }
+    
+    .products_summary {
+      flex-grow: 1; /* Allow this element to grow and take up available space */
+    }
 
       .price-quantity{
         padding-left: 20px;
@@ -44,8 +50,9 @@
       }
 
       .product-box{
-        display: grid;
-        grid-template-columns: 10% 80% 5%
+       display: flex;
+       flex-direction: row;
+       justify-content: center;
       }
 
     
@@ -93,9 +100,10 @@
   }
 
   .products-cart {
-    text-align: center;
-    display: grid;
-    grid-row-gap: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
   }
 
   .product-card-section {
@@ -105,6 +113,7 @@
     border-radius: 5px;
     margin: 0 20px;
     padding: 10px;
+    width: 300px;
   }
 
   .count-number {
@@ -165,9 +174,10 @@
   }
 
   .products-cart {
-    text-align: center;
-    display: grid;
-    grid-row-gap: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
   }
 
   .product-card-section {
@@ -177,6 +187,7 @@
     border-radius: 5px;
     margin: 0 20px;
     padding: 10px;
+    width: 300px;
   }
 
   .count-number {
@@ -218,7 +229,6 @@
   }
 
 
-
 }
 
 
@@ -251,6 +261,7 @@
     border-radius: 5px;
     margin: 0 20px;
     padding: 10px;
+
   }
 
   .count-number {
