--- a/src/Components/Comics/Comic.css
+++ b/src/Components/Comics/Comic.css
@@ -21,42 +21,49 @@
   .select-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    
     gap: 10px;
   }
   
-  .select-container div {
+  /* .select-container div {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 5px;
-  }
+  } */
   
   .select-container label {
     font-weight: bold;
   }
 
+.filter-products{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
  
   .filter-toggle{
-    text-align: left;
-    margin-left: 60px;
-    display: grid;
-    grid-row-gap: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    align-items: flex-start;
+    margin-top: 20px;
+ 
   }
 
   .product-card{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-row-gap: 20px;
-    grid-column-gap: 10px;
-    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 15px;
     
   }
 
 
   .product{
-    height: 100%;
-    width: 70%;
+    height: 400px;
+    width: 250px;
     border: 1px solid silver;
     border-radius: 2%;
     margin-left: 50px;
