--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -249,9 +249,10 @@
   }
 
   .products-cart {
-    text-align: center;
-    display: grid;
-    grid-row-gap: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
   }
 
   .product-card-section {
@@ -261,7 +262,7 @@
     border-radius: 5px;
     margin: 0 20px;
     padding: 10px;
-
+    width: 300px;
   }
 
   .count-number {
