--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -154,6 +154,18 @@
     margin: 0 20px;
   }
 
+  .product-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .card-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
 }
 
 
@@ -226,6 +238,18 @@
 
   .order-details {
     margin: 0 20px;
+  }
+
+  .product-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .card-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
 
@@ -301,5 +325,17 @@
 
   .order-details {
     margin: 0 20px;
+  }
+
+  .product-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .card-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
