--- a/src/Components/Comics/Comic.css
+++ b/src/Components/Comics/Comic.css
@@ -159,7 +159,7 @@
   .product-card{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+   
     align-items: center;
     gap: 20px;
   }
@@ -171,7 +171,6 @@
     border: 2px solid white;
     background-color: black;
     border-radius: 2%;
-
     width: 300px;
   }
 
@@ -181,6 +180,15 @@
   }
 
 
+  .product-info-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+hr{
+  width: 100%;
+}
  .cart-btns-category{
     background-color: rgb(11, 11, 191);
     color: white;
@@ -282,7 +290,7 @@
   .product-card{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+   
     align-items: center;
     gap: 20px;
   }
@@ -294,7 +302,6 @@
     border: 2px solid white;
     background-color: black;
     border-radius: 2%;
-
     width: 300px;
   }
 
@@ -304,6 +311,15 @@
   }
 
 
+  .product-info-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+hr{
+  width: 100%;
+}
  .cart-btns-category{
     background-color: rgb(11, 11, 191);
     color: white;
@@ -403,7 +419,7 @@
   .product-card{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+   
     align-items: center;
     gap: 20px;
   }
@@ -415,7 +431,6 @@
     border: 2px solid white;
     background-color: black;
     border-radius: 2%;
-
     width: 300px;
   }
 
@@ -425,6 +440,15 @@
   }
 
 
+  .product-info-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+hr{
+  width: 100%;
+}
  .cart-btns-category{
     background-color: rgb(11, 11, 191);
     color: white;
