--- a/src/Components/Comics/Comic.css
+++ b/src/Components/Comics/Comic.css
@@ -387,8 +387,9 @@ hr{
 
   .select-container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 10px;
     gap: 10px;
    
   }
@@ -418,9 +419,8 @@ hr{
 
   .product-card{
     display: flex;
-    flex-direction: column;
-   
-    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 20px;
   }
 
