--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -11,23 +11,26 @@
       }
 
       .Navigation{
-        margin-top: 10px;
-        display: grid;
-        grid-template-columns: 40% 20% 5%;
-        grid-column-gap: 150px;
-        height: 100px
+        display: flex;
+        flex-direction: row;
+        gap: 150px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        justify-content: center;
       }
 
       .nav-1{
-        display: grid;
-        grid-template-columns: 40% 50%;
-        grid-column-gap: 10px;
+        display: flex;
+        flex-direction: row;
+        gap: 30px;
+        margin-left: 30px;
       }
 
       .nav-category{
-        margin-top: 22px;
-        display: grid;
-        grid-template-columns: repeat(3, 40%);
+        display: flex;
+        flex-direction: row;
+        margin-top: 20px;
+        gap: 40px;
       }
 
       .nav-3{
