--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -11,26 +11,23 @@
       }
 
       .Navigation{
-        display: flex;
-        flex-direction: row;
-        gap: 150px;
-        margin-top: 20px;
-        margin-bottom: 20px;
-        justify-content: center;
+        margin-top: 10px;
+        display: grid;
+        grid-template-columns: 40% 20% 5%;
+        grid-column-gap: 150px;
+        height: 100px
       }
 
       .nav-1{
-        display: flex;
-        flex-direction: row;
-        gap: 30px;
-        margin-left: 30px;
+        display: grid;
+        grid-template-columns: 40% 50%;
+        grid-column-gap: 10px;
       }
 
       .nav-category{
-        display: flex;
-        flex-direction: row;
-        margin-top: 20px;
-        gap: 40px;
+        margin-top: 22px;
+        display: grid;
+        grid-template-columns: repeat(3, 40%);
       }
 
       .nav-3{
@@ -324,7 +321,7 @@
   font-size: 18px;
   padding: 15px;
   height: 30px;
-  width: 300px;
+  width: 200px;
   background-color: black;
   color: white;
   border: white 1px solid;
@@ -363,7 +360,7 @@
     }
   
     .nav-category{
-  
+      margin-top: 25px;
       display: flex;
       flex-direction: row;
       justify-content: center;
@@ -379,10 +376,28 @@
    display: flex;
    flex-direction: row;
    justify-content: center;
-   gap: 20px;
+   gap: 25px;
+   margin-top: 15px;
 
   }
 
- 
+ .Navigation{
+   display: flex;
+   flex-direction: row;
+   gap: 40px;
+   margin-top: 10px;
+   margin-bottom: 10px;
+ }
+
+ .nav-1{
+   display: flex;
+   flex-direction: row;
+   margin-left: 10px;
+   gap: 20px;
+ }
+
+ .user{
+   font-size: 15px;
+ }
 
 }
