Changed the rating so now it uses stars instead

--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,14 @@
   cursor: pointer;
 }
  
- 
- 
+input[type=radio]{
+  display: none;
+}
+
+.star{
+  cursor: pointer;
+}
+
  @media (min-width: 993px){
 
    body{
@@ -118,13 +124,7 @@
     cursor: pointer;
   }
   
-  hr{
-    border: none;
-    height: 2px;
-    /* Set the hr color */
-    color: #333;  /* old IE */
-    background-color: #333;  /* Modern Browsers */
-  }
+
   
 
   a{
